--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.trevorism.easypasscost"
+        applicationId "com.trevorism.soundboard"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
