--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ismicon"
+            android:logo="@mipmap/ismicon"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
