--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name="com.trevorism.soundboard.MainActivity"
-                  android:exported="true" >
+                  android:launchMode="singleInstance"
+                  android:icon="@mipmap/ismicon"
+                  android:logo="@mipmap/ismicon">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
